[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rimeX"
authors = [
    {name = "Mahé Perrette", email = "mahe.perrette@gmail.com"},
    {name = "Niklas Schwind", email = "niklas.schwind@climateanalytics.org"},
    {name = "Edward byers", email = "byers@iiasa.ac.at"},
    {name = "Mia Werning", email = "werning@iiasa.ac.at"},
]

description='Rapid Impact Model Emulator for the Climate Impact Explorer in collaboration with IIASA'
readme = "README.md"
requires-python = ">=3.7"
keywords = ['climate', 'impact model', 'emulator', 'ISIMIP', 'global mean temperature']
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
      "pyyaml",
      "numpy",
      "pandas",
      "xarray",
      "tqdm",
]

dynamic = ["version"]

[project.optional-dependencies]
all = [
    "isimip_client@https://github.com/ISI-MIP/isimip-client/archive/refs/tags/1.0.1.zip",
]

[project.scripts]
rime-config = "rimeX.config:main"
rime-download-isimip = "rimeX.download:main"
rime-pre-gmt = "rimeX.global_average_tas:main"
rime-pre-region = "rimeX.regional_average:main"
rime-init-wl = "rimeX.warminglevels:main"
rime-init-digitize = "rimeX.digitize:main"
rime = "rimeX.emulator:main"

[project.urls]
homepage = "https://github.com/NiklasSchwind/rimeX"

[tool.setuptools_scm]
write_to = "rimeX/_version.py"

[tool.setuptools.package-data]
myModule = ["*.yml"]