[tool.poetry]
name = "rime"
authors = ["Edward Byers <byers@iiasa.ac.at>",
			"Mia Werning <werning@iiasa.ac.at>"]
description = "Rapid Impact Model Emulator"
repository = "https://github.com/iiasa/rime"
homepage = "https://iiasa.ac.at/programs/ece"
documentation = "https://github.com/iiasa/rime"
version = "0.1.0"
license = "GNU GPL v3"
readme = "README.md"
keywords = ""

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
alive-progress = "^3.1.5"
dask = "^2024.2.0"
distributed = "^2024.2.0"
holoviews = "^1.18.3"
hvplot = "^0.9.2"
matplotlib = "^3.6"
numpy = "^1.23"
pandas = "^2.2.0"
pyam-iamc = "^1.8"
pyyaml = "^6.0.1"
rich = "^13.7.0"
scipy = "^1.12.0"
seaborn = "^0.13.2"
xarray = "^2024.1.1"
netcdf4 = "^1.6.5"
cartopy = "^0.22.0"
geoviews = "^1.11.1"
pyproj = "^3.6.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-multiversion = "^0.2.4"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-bibtex = "^2.6.2"
sphinxcontrib-openapi = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
