[metadata]
name = python_stub
author = Daniel Huppmann
author_email = huppmann@iiasa.ac.at
description = Template for creating python packages and Sphinx-based docs pages
long_description_content_type = text/markdown
long_description = file:README.md
url = https://www.iiasa.ac.at
# license = (TODO: update this to match the license you choose for the package)

[options]
packages = python_stub
install_requires =
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest
doc =
    sphinx
    sphinx_rtd_theme