[metadata]
name = rime
author = Edward Byers, Mia Werning
author_email = byers@iiasa.ac.at
description = Rapid Impact Model Emulator
long_description_content_type = text/markdown
long_description = file:README.md
url = https://www.iiasa.ac.at
license = GNU CPL v3

[options]
packages = python_stub
install_requires =
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest
doc =
    sphinx
    sphinx_rtd_theme