[metadata]
name = rime
author = Edward Byers, Mia Werning
author_email = byers@iiasa.ac.at
description = Rapid Impact Model Emulator
long_description_content_type = text/markdown
long_description = file:README.md
url = https://www.iiasa.ac.at
license = GNU CPL v3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU CPL v3
    Natural Language :: English
    Programming Language :: Python :: 3
	
[options]
packages = rime
include_package_data = True
python_requires = >=3.10, <3.12

# To check this, pip install pipreqs, then run pipreqs . in the rime directory
install_requires =
	dask~=2022.7.0
	holoviews~=1.17.1
	hvplot~=0.9.0
	matplotlib~=3.5.2
	numpy~=1.23.5
	pandas~=1.5.2
	pyam_iamc~=1.7.1.dev3+gbec0295
	PyYAML~=6.0
	rich~=13.6.0
	scipy~=1.9.3
	seaborn~=0.13.0
	xarray~=2022.11.0
	
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest
doc =
    sphinx
    sphinx_rtd_theme